--- a/index.html
+++ b/index.html
@@ -1927,6 +1927,11 @@
 	    dropdown.style.display = "none";
 	  }
 	});
+	var dropdownElementList = [].slice.call(document.querySelectorAll('.dropdown-toggle'))
+	var dropdownList = dropdownElementList.map(function (dropdownToggleEl) {
+	  return new bootstrap.Dropdown(dropdownToggleEl)
+	});
 	</script>
+	
 </body>
 </html>
