--- a/index.html
+++ b/index.html
@@ -1632,6 +1632,7 @@
 		<center><h6>---  BPS3200  ---</h6></center>
 	</div>
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js"></script>
+	<script src="https://unpkg.com/@popperjs/core@2"></script>
 	<script src="skrip.js"></script>
 	<script>
 	document.addEventListener("DOMContentLoaded", function() {
