--- a/index.html
+++ b/index.html
@@ -1631,8 +1631,8 @@
 	<div class="footer">
 		<center><h6>---  BPS3200  ---</h6></center>
 	</div>
+	<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"></script>
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js"></script>
-	<script src="https://unpkg.com/@popperjs/core@2"></script>
 	<script src="skrip.js"></script>
 	<script>
 	document.addEventListener("DOMContentLoaded", function() {
