--- a/index.html
+++ b/index.html
@@ -214,9 +214,9 @@
 		    Monitoring Kegiatan
 		  </button>
 		  <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
-		    <li><a class="dropdown-item" href="https://s.id/32pest23">PES ST2023</a></li>
-		    <li><a class="dropdown-item" href="https://s.id/32sbr23">Ground Check SBR</a></li>
-		    <li><a class="dropdown-item" href="#">Pengolahan Peta ST2023</a></li>
+		    <li><a class="dropdown-item" href="https://s.id/32pest23" target="_blank">PES ST2023</a></li>
+		    <li><a class="dropdown-item" href="https://s.id/32sbr23" target="_blank">Ground Check SBR</a></li>
+		    <li><a class="dropdown-item" href="#" target="_blank">Pengolahan Peta ST2023</a></li>
 		  </ul>
 		</div>
 	</div>
