--- a/index.html
+++ b/index.html
@@ -1802,6 +1802,7 @@
 	    { name: 'Cinta Statistik - Buku Saku', url: 'https://bps3273.top/cantik' },
 	    { name: 'Community BPS (VPN)', url: 'https://community.bps.go.id/' },
 	    { name: 'Data Spasial BPS (VPN)', url: 'https://dataspasial.bps.go.id/' },
+	    { name: 'DDA Kecamatan', url: 'https://drive.bps.go.id/s/2mb6GKNdnLdfZta' },
 	    { name: 'Drive BPS', url: 'https://drive.bps.go.id/' },
 	    { name: 'E Monev Bappenas', url: 'https://e-monev.bappenas.go.id/fe/jumper' },
 	    { name: 'Ekspor Impor', url: 'https://jabar.bps.go.id/subject/8/ekspor-impor.html#subjekViewTab3' },
