--- a/index.html
+++ b/index.html
@@ -209,29 +209,33 @@
 	</div>
 	<br>
 	<div class="row">
-		<div class="content">
-			<div class="dropdown">
-			  <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false">
-			    Monitoring Kegiatan
-			  </button>
-			  <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
-			    <li><a class="dropdown-item" href="https://s.id/32pest23" target="_blank">PES ST2023</a></li>
-			    <li><a class="dropdown-item" href="https://s.id/32sbr23" target="_blank">Ground Check SBR</a></li>
-			    <li><a class="dropdown-item" href="https://s.id/32petast23" target="_blank">Pengolahan Peta ST2023</a></li>
-			  </ul>
+		<div class="col-md-6">
+			<div class="content">
+				<div class="dropdown">
+				  <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false">
+				    Monitoring Kegiatan
+				  </button>
+				  <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
+				    <li><a class="dropdown-item" href="https://s.id/32pest23" target="_blank">PES ST2023</a></li>
+				    <li><a class="dropdown-item" href="https://s.id/32sbr23" target="_blank">Ground Check SBR</a></li>
+				    <li><a class="dropdown-item" href="https://s.id/32petast23" target="_blank">Pengolahan Peta ST2023</a></li>
+				  </ul>
+				</div>
 			</div>
 		</div>
-		<div class="content">
-			<div class="dropdown">
-			  <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false">
-			    Dashboard Indikator
-			  </button>
-			  <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
-			    <li><a class="dropdown-item" href="https://32-pivot-tabel.streamlit.app/" target="_blank">Pivot Tabel</a></li>
-			    <li><a class="dropdown-item" href="" target="_blank">Sosial</a></li>
-			    <li><a class="dropdown-item" href="" target="_blank">Ekonomi</a></li>
-			    <li><a class="dropdown-item" href="" target="_blank">Pertanian</a></li>
-			  </ul>
+		<div class="col-md-6">
+			<div class="content">
+				<div class="dropdown">
+				  <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false">
+				    Dashboard Indikator
+				  </button>
+				  <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
+				    <li><a class="dropdown-item" href="https://32-pivot-tabel.streamlit.app/" target="_blank">Pivot Tabel</a></li>
+				    <li><a class="dropdown-item" href="" target="_blank">Sosial</a></li>
+				    <li><a class="dropdown-item" href="" target="_blank">Ekonomi</a></li>
+				    <li><a class="dropdown-item" href="" target="_blank">Pertanian</a></li>
+				  </ul>
+				</div>
 			</div>
 		</div>
 	</div>
