--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@
 	</div>
 	<br>
 	<div class="row">
-		<div class="col-md-6">
+		<div class="col-md-4">
 			<div class="content">
 				<div class="dropdown">
 				  <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false">
@@ -223,7 +223,7 @@
 				</div>
 			</div>
 		</div>
-		<div class="col-md-6">
+		<div class="col-md-4">
 			<div class="content">
 				<div class="dropdown">
 				  <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false">
@@ -234,6 +234,21 @@
 				    <li><a class="dropdown-item" href="" target="_blank">Sosial</a></li>
 				    <li><a class="dropdown-item" href="" target="_blank">Ekonomi</a></li>
 				    <li><a class="dropdown-item" href="" target="_blank">Pertanian</a></li>
+				  </ul>
+				</div>
+			</div>
+		</div>
+		<div class="col-md-4">
+			<div class="content">
+				<div class="dropdown">
+				  <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false">
+				    Mind Map
+				  </button>
+				  <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
+				    <li><a class="dropdown-item" href="https://gitmind.com/app/docs/menk0lw2" target="_blank">Cascading Kinerja</a></li>
+				    <li><a class="dropdown-item" href="https://gitmind.com/app/docs/mvex835v" target="_blank">Metadata Statistik</a></li>
+				    <li><a class="dropdown-item" href="https://gitmind.com/app/docs/mui75dxg" target="_blank">Identifikasi Kebutuhan Data</a></li>
+				    <li><a class="dropdown-item" href="https://gitmind.com/app/docs/mdmqh6ui" target="_blank">Diseminasi Hasil ST2023</a></li>
 				  </ul>
 				</div>
 			</div>
